2007-02-04  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/Class.java
	(newInstance): Moved setAccessible call to helper method.
	(getEnumConstants): Call new helper method to allow values method to be
	called on non-public enum classes.
	(setAccessible): New helper method.
	* java/lang/Enum.java
	(valueOf): Call new helper method in class to allow field value to
	be read on non-public enum classes.

2007-02-04  Jeroen Frijters  <jeroen@frijters.net>

	Fix for #30693
	* gnu/java/nio/charset/ByteCharset.java
	(ByteCharset.Decoder.decodeLoop): Reset input buffer position if
	the byte read was unmappable.

2007-02-02  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java
	(executeGetValues): Changed getFrame to use a jlong to pass frameID.
	(executeSetValues): Ditto.
	(executeThisObject): Ditto.
	* vm/reference/gnu/classpath/jdwp/VMFrame.java: Added thread field and a
	constructor used to create VMFrames.
	(getThread): New method.
	* vm/reference/gnu/classpath/jdwp/VMVirtualMachine.java(getFrame): Changed
	to take a long instead of a ByteBuffer to pass the frameID.

2007-02-01  Tom Tromey  <tromey@redhat.com>

	* java/util/logging/LogManager.java (reset): Remove bogus
	'while'.

2007-01-31  Casey Marshall  <csm@gnu.org>

	* gnu/javax/net/ssl/Base64.java: move to `gnu/java/util/Base64.java.' 
	* gnu/javax/net/ssl/PrivateCredentials.java: clean up unused imports.
	(add): use `gnu.java.util.Base64.'
	* gnu/java/net/protocol/http/Request.java (authenticate): use
	`gnu.java.util.Base64.'
	* tools/gnu/classpath/tools/jarsigner/HashUtils.java (hashStream):
	likewise.
	* tools/gnu/classpath/tools/keytool/CertReqCmd.java (start): likewise.
	* tools/gnu/classpath/tools/keytool/ExportCmd.java (start): likewise.
	* tools/gnu/classpath/tools/keytool/ListCmd.java (printRFC1421):
	likewise.
	* gnu/java/net/Base64.java: removed.
	* gnu/java/security/util/Base64.java: removed.

2007-01-31  Casey Marshall  <csm@gnu.org>
