@@ -1,3 +1,9 @@
+2007-02-05  Tom Tromey  <tromey@redhat.com>
+
+	* java/net/Proxy.java (equals): Handle case where address==null.
+	(hashCode): Likewise.
+	(toString): Likewise.
+
 2007-02-04  Jeroen Frijters  <jeroen@frijters.net>
 
 	* java/lang/Class.java
